--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -77,6 +77,7 @@ header {
 }
 
 main {
+  position: relative;
   padding: 1rem;
   display: grid;
   place-items: center;
@@ -97,7 +98,7 @@ main {
 
 button {
   padding: 1rem 2rem;
-  margin-inline: 0.25rem;
+  margin: 0.25rem;
 
   border-radius: var(--border-radius-100);
   outline: none;
